...
  "accounts_forceUpdate_subheading": "A new Envoy update is available that contains important upgrades and fixes. \n\nTo continue using Envoy, please update to the latest version. Thank you.",
  "accounts_loading_loadingAccount": "Loading Account…",
  "accounts_screen_walletType_Envoy": "Envoy",
  "accounts_screen_walletType_Passport": "Passport",
  "accounts_screen_walletType_defaultName": "Mobile Wallet",
  "accounts_switchDefault": "Default",
...
  "common_button_contactSupport": "Contact Support",
  "common_button_retry": "Retry",
  "component_12WordSeed": "12 Word Seed",
  "component_24WordSeed": "24 Word Seed",
  "component_Apply": "Apply",
...
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
  "component_dismiss": "Dismiss",
  "component_done": "Done",
  "component_dontShowAgain": "Don’t show again",
  "component_exit": "Exit",
...
  "component_goToSettings": "Go to Settings",
  "component_learnMore": "Learn more",
  "component_minishield_buy": "Buy",
  "component_next": "Next",
  "component_no": "No",
...
  "component_resetSorting": "Reset sorting",
  "component_retry": "Retry",
  "component_save": "Save",
  "component_searching": "Searching",
  "component_skip": "Skip",
  "component_sortBy": "Sort by",
  "component_tryAgain": "Try Again",
...
  "envoy_faq_answer_3": "Envoy is a simple Bitcoin wallet with powerful account management and privacy features, including Magic Backups.Use Envoy alongside your Passport hardware wallet for setup, firmware updates, and more.",
  "envoy_faq_answer_4": "Magic Backups is the easiest way to set up and back up a Bitcoin mobile wallet. Magic Backups stores your mobile wallet seed end-to-end encrypted in iCloud Keychain or Android Auto Backup. All app data is encrypted by your seed and stored on Foundation Servers. Set up your wallet in 60 seconds, and automatically restore if you lose your phone!",
  "envoy_faq_answer_5": "Magic Backups are completely optional for users that want to leverage Envoy as a mobile wallet. If you prefer to manage your own mobile wallet seed words and backup file, choose 'Manually Configure Seed Words' at the wallet set up stage.",
  "envoy_faq_answer_6": "The Envoy backup file contains app settings, account info and transaction labels. The file is encrypted with your mobile wallet seed words. For Magic Backup users, this is stored fully encrypted on the Foundation server. Manual backup Envoy users can download and store their backup file anywhere they like. This could be any combination of your phone, a personal cloud serve
  "envoy_faq_answer_7": "No, Envoy’s core features will always be free to use. In the future we may introduce optional paid services or subscriptions.",
...
  "envoy_support_email": "Email",
  "envoy_support_telegram": "Telegram",
  "envoy_welcome_screen_cta1": "Enable Magic Backups",
  "envoy_welcome_screen_cta2": "Manually Configure Seed Words",
  "envoy_welcome_screen_heading": "Create New Wallet",
...
  "magic_setup_tutorial_android_subheading": "The easiest way to create a new Bitcoin wallet while maintaining your sovereignty.\n\nMagic Backups automatically backs up your wallet and settings with Android Auto Backup, 100% end-to-end encrypted. \n\n[[Learn more]].",
  "magic_setup_tutorial_heading": "Magic Backups",
  "magic_setup_tutorial_ios_CTA1": "Create Magic Backup",
  "magic_setup_tutorial_ios_CTA2": "Recover Magic Backup",
  "magic_setup_tutorial_ios_subheading": "The easiest way to create a new Bitcoin wallet while maintaining your sovereignty.\n\nMagic Backups automatically back up your wallet and settings with iCloud Keychain, 100% end-to-end encrypted. \n\n[[Learn more]].",
...
  "manage_account_address_heading": "ACCOUNT DETAILS",
  "manage_account_descriptor_subheading": "Make sure not to share this descriptor unless you are comfortable with your transactions being public.",
  "manage_account_menu_editAccountName": "EDIT ACCOUNT NAME",
  "manage_account_menu_showDescriptor": "SHOW DESCRIPTOR",
  "manage_account_remove_heading": "Are you sure?",
...
  "manual_setup_import_backup_subheading": "Would you like to restore an existing Envoy Backup file?\n\nIf not, Envoy will create a new encrypted backup file.",
  "manual_setup_import_seed_12_words_fail_modal_subheading": "That seed appears to be invalid. Please check the words entered, including the order they are in and try again.",
  "manual_setup_import_seed_12_words_heading": "Enter Your Seed",
  "manual_setup_import_seed_CTA1": "Import with QR code",
  "manual_setup_import_seed_CTA2": "24 Word Seed",
...
  "manual_setup_magicBackupDetected_heading": "Magic Backup Detected",
  "manual_setup_magicBackupDetected_ignore": "Ignore",
  "manual_setup_magicBackupDetected_restore": "Restore",
  "manual_setup_magicBackupDetected_subheading": "A Magic Backup was found on the server.  \nRestore your backup?",
  "manual_setup_recovery_fail_cta2": "Import Seed Words",
...
  "manual_setup_recovery_success_heading": "Importing your Seed",
  "manual_setup_tutorial_CTA1": "Generate New Seed",
  "manual_setup_tutorial_CTA2": "Import Seed",
  "manual_setup_tutorial_heading": "Manual Seed Setup",
  "manual_setup_tutorial_subheading": "If you prefer to manage your own seed words, continue below to import or create a new seed.\n\nPlease note that you alone will be responsible for managing backups. No cloud services will be used.",
...
  "settings_advancedModalReceiveTaproot_content": "With this toggle on, Taproot addresses will be generated when you tap receive. Ensure entities sending you Bitcoin are Taproot compatible before proceeding.",
  "settings_advancedModalReceiveTaproot_title": "Receive to Taproot",
  "settings_advanced_enableBuyRamp": "Buy in Envoy",
  "settings_advanced_enabled_signet_modal_link": "Learn more about Signet [[here]].",
  "settings_advanced_enabled_signet_modal_subheading": "Enabling Signet adds a Signet version of your Envoy Wallet. This feature is primarily used by developers or testers and has zero value.",
...
  "wallet_security_modal__heading": "Security Tip",
  "wallet_security_modal_subheading": "Envoy is storing more than the recommended amount of Bitcoin for a mobile, internet connected wallet.\n\nFor ultra-secure, offline storage, Foundation suggests Passport hardware wallet.",
  "wallet_setup_success_heading": "Your Wallet Is Ready",
  "wallet_setup_success_subheading": "Envoy is set up and ready for your Bitcoin!",
  "welcome_screen_ctA1": "Set Up Envoy Wallet",
  "welcome_screen_cta2": "Manage Passport",
  "welcome_screen_heading": "Welcome to Envoy"
...
